docs: the 0.9.1 launch surface is published — say so everywhere
The README still said 'not yet production ready' and 'the analyzer is not
yet released as a binary' while 0.9.1 is live on the Plugin Portal, Maven
Central and GitHub Releases. Rewritten to lead with installation.

Also: retire the acronym expansion from the manual and the book (#3), fix
the stale build/e2immu default in the manual overview, mark PUBLISHING.md
and the landing-surface checklist as completed, and record in the 0.9.1
/Users/bnaudts/git/jfocus-devops/scripts/boxlock nice -n 10 release notes that the Plugin Portal review cleared.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>